--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
+		"helmet": "^7.1.0",
 		"mocha": "^3.2.0",
+		"mongoose": "^8.4.0",
 		"zombie": "^5.0.5"
 	},
 	"repository": {
